# django-stratagem

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
docs/: api.md  conf.py  explanation.md  hooks.md  howto-async.md  howto-conditions.md  howto-drf.md  howto-fields.md  howto-forms-admin.md  howto-hierarchies.md  howto-plugins.md  howto-templates.md  howto-testing.md  index.md  llms-full.txt  llms.txt  quickstart.md  recipes.md  tutorial-construction.md  tutorial.md
example/: manage.py  settings.py  urls.py
example/billing/: admin.py  apps.py  billing_models.py  forms.py  invoicing_strategies.py  models.py  registry.py  signals.py
example/billing/migrations/: 0001_initial.py
example/compliance/: apps.py  compliance_reports.py  inspection_schedules.py  registry.py
example/django_compliance_canada/: apps.py  compliance_reports.py  stratagem_plugin.py
example/onboarding/: apps.py  conditions.py  forms.py  registry.py  views.py  workflows.py
example/platform_core/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
example/platform_core/migrations/: 0001_initial.py
example/templates/: base.html
example/templates/dashboard/: subcontractor.html
example/templates/onboarding/: settings.html
example/templates/registration/: login.html
examples/exports/: apps.py  formats.py  registry.py  serializers.py
examples/notifications/: apps.py  channels.py  registry.py
examples/payments/: apps.py  gateways.py  models.py  registry.py
examples/payments/migrations/: 0001_initial.py
src/django_stratagem/: __init__.py  admin.py  app_settings.py  apps.py  availability.py  checks.py  conditions.py  exceptions.py  fields.py  forms.py  inspector.py  interfaces.py  lookups.py  plugins.py  pytest_plugin.py  registry.py  signals.py  testing.py  urls.py  utils.py  validators.py  widgets.py
tests/: conftest.py  registries_fixtures.py  settings.py  test_admin.py  test_apps.py  test_async.py  test_availability.py  test_checks.py  test_comprehensive.py  test_conditions_extended.py  test_drf_views.py  test_edge_cases.py  test_examples.py  test_exceptions.py  test_extension_hooks.py  test_fields_descriptors.py  test_forms.py  test_inspector.py  test_lookups.py  test_management_commands.py  test_model_persistence.py  test_plugins.py  test_pytest_plugin.py  test_registries.py  test_registry.py  test_registry_hierarchical.py  test_startregistry.py  test_templatetags.py  test_testing_toolkit.py  test_utils.py  test_validators.py  test_widgets.py  urls.py
tests/exporter_plugins/: apps.py  exporters.py
tests/exporters/: apps.py  models.py  registry.py
tests/testapp/: models.py
(+19 files in other folders)
